[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/interface/ui/progress_bar.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/ui/health_ui.png" type="Texture" id=2]
[ext_resource path="res://ui/UI.gd" type="Script" id=3]
[ext_resource path="res://ui/fonts/Texturina-20.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/Score.gd" type="Script" id=5]
[ext_resource path="res://ui/Pause.gd" type="Script" id=6]
[ext_resource path="res://ui/fonts/Nunito-Bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui/Result.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.784314 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" type="TextureProgress" parent="Interface"]
anchor_left = 0.02
anchor_top = 0.032
anchor_right = 0.32
anchor_bottom = 0.096
margin_right = -40.0
margin_bottom = -8.0
rect_scale = Vector2( 1.5, 2 )
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Interface/HealthBar"]

[node name="Score" type="Label" parent="Interface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "00000"
align = 1
valign = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="BG" type="Panel" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -88.5
margin_right = 64.0
margin_bottom = 88.5
custom_styles/panel = SubResource( 2 )

[node name="ResumeButton" type="Button" parent="Pause/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -17.5
margin_right = 40.0
margin_bottom = 2.5
custom_fonts/font = ExtResource( 7 )
text = "Resume"

[node name="ExtitToMenuButton" type="Button" parent="Pause/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 12.5
margin_right = 40.0
margin_bottom = 32.5
custom_fonts/font = ExtResource( 7 )
text = "Exit To Menu"

[node name="QuitButton" type="Button" parent="Pause/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 42.5
margin_right = 40.0
margin_bottom = 62.5
custom_fonts/font = ExtResource( 7 )
text = "Quit"

[node name="Label" type="Label" parent="Pause/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -69.5
margin_right = 33.0
margin_bottom = -43.5
custom_fonts/font = ExtResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="Result" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="BG" type="Panel" parent="Result"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Result"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -96.5
margin_right = 142.0
margin_bottom = 96.5
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ResetButton" type="Button" parent="Result/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -9.5
margin_right = 40.0
margin_bottom = 10.5
custom_fonts/font = ExtResource( 7 )
text = "Reset"

[node name="ExtitToMenuButton" type="Button" parent="Result/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 20.5
margin_right = 40.0
margin_bottom = 40.5
custom_fonts/font = ExtResource( 7 )
text = "Exit To Menu"

[node name="QuitButton" type="Button" parent="Result/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 50.5
margin_right = 40.0
margin_bottom = 70.5
custom_fonts/font = ExtResource( 7 )
text = "Quit"

[node name="CurrentScore" type="Label" parent="Result/Panel"]
anchor_left = 0.276408
anchor_top = 0.0451977
anchor_right = 0.723592
anchor_bottom = 0.19209
custom_fonts/font = ExtResource( 4 )
text = "Your score: 00000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HighScore" type="Label" parent="Result/Panel"]
self_modulate = Color( 1, 0.631373, 0, 1 )
anchor_left = 0.276408
anchor_top = 0.196803
anchor_right = 0.723592
anchor_bottom = 0.343696
custom_fonts/font = ExtResource( 4 )
text = "Highscore: 00000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Pause/Panel/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/Panel/ExtitToMenuButton" to="Pause" method="_on_ExtitToMenuButton_pressed"]
[connection signal="pressed" from="Pause/Panel/QuitButton" to="Pause" method="_on_QuitButton_pressed"]
[connection signal="visibility_changed" from="Result" to="Result" method="_on_Result_visibility_changed"]
[connection signal="pressed" from="Result/Panel/ResetButton" to="Result" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Result/Panel/ExtitToMenuButton" to="Result" method="_on_ExtitToMenuButton_pressed"]
[connection signal="pressed" from="Result/Panel/QuitButton" to="Result" method="_on_QuitButton_pressed"]
